--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <style>
+      * {
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
